# model-training

./: .coveragerc  .gitignore  .pylintrc  README.md  dvc.yaml  generate_badge.py  params.yaml  phishing-detection-cnn.ipynb  pyproject.toml  pytest.ini  report.txt  requirements.txt  tmp602voao3
.dvc/: config
.github/workflows/: pipeline.yml
REMLA_PROJECT/: .gitignore  LICENSE  Makefile  README.md  requirements.txt
REMLA_PROJECT/configs/: params.yaml
REMLA_PROJECT/data/: .gitignore  raw.dvc
REMLA_PROJECT/experiments/: data_preprocessing.py  get_data.py  get_data_dvc.py
REMLA_PROJECT/experiments/notebooks/: phishing-detection-cnn.ipynb
REMLA_PROJECT/models/: .gitignore
REMLA_PROJECT/models/model/: model.h5
REMLA_PROJECT/models/predictions/: .gitignore
REMLA_PROJECT/reports/: .gitignore
REMLA_PROJECT/src/data/: data_preprocessing.py  get_data.py  get_data_dvc.py  preprocess_data.py  upload_data.py
REMLA_PROJECT/src/models/model1/: model.py  predict.py  train.py
REMLA_PROJECT/src/models/model_simple/: model.py  predict.py  train.py
REMLA_PROJECT/src/visualization/: evaluation.py
REMLA_PROJECT/tests/data/: data_test.py  preprocess_data_test.py
REMLA_PROJECT/tests/models/: baseline_test.py  mode_predict_test.py  model_test.py  model_train_test.py  monitoring_test.py  pipeline_test.py  predict_test.py  test_against_simpler_model.py  train_model_test.py  train_test.py
REMLA_PROJECT/tests/visualisation/: evaluation_test.py
